---
id: entity-relationship-diagram
title: Diagrama Entidad-Relación - Simple ArtifactERP
---
erDiagram
    USER ||--o{ USER_DEVICE : "tiene"
    USER ||--o{ QUOTATION : "crea"
    CLIENT ||--o{ SALE : "realiza"
    SALE ||--|| QUOTATION : "basada en"
    SALE ||--o{ PRODUCT : "contiene"
    QUOTATION ||--o{ QUOTATION_VERSION : "tiene"
    QUOTATION_VERSION ||--o{ ASSETS_QUOTATION : "incluye"
    QUOTATION_VERSION ||--o{ SUPPLIES_QUOTATION : "incluye"
    ASSETS ||--o{ ASSETS_QUOTATION : "cotizado en"
    SUPPLIES ||--o{ SUPPLIES_QUOTATION : "cotizado en"
    SUPPLIES ||--o{ ASSORTMENT : "comprado en"
    SUPPLIES ||--o{ INVENTORY_SUPPLIES : "registra"
    SUPPLIES ||--|| UNITS_MEASUREMENT : "usa"
    UNITS_MEASUREMENT ||--o{ INVENTORY_SUPPLIES : "usa"
    PRODUCT ||--o{ INVENTORY_PRODUCT : "registra"
    SYSTEM_CONFIGURATION ||--|| SYSTEM_CONFIGURATION : "única"

    USER {
        string id PK
        string email
        string userName
        string displayName
        string passwordHash
        string googleId
        string profilePhotoUrl
        enum userType
        enum role
        boolean isActive
        datetime createdAt
        datetime lastLoginAt
    }

    USER_DEVICE {
        int userDeviceId PK
        int userId FK
        string deviceId
        string platform
        string deviceName
        string pushToken
        datetime lastSeenAt
        boolean isActiveSession
    }

    CLIENT {
        int clientId PK
        string nickname
        string firstName
        string lastName
        string address
        string type
    }

    SALE {
        int saleId PK
        int clientId FK
        int quotationId FK
        string paymentsJson
        string description
        string saleType
        enum status
        string locationJson
        datetime date
        decimal discount
        decimal subTotal
        decimal totalCost
        string lastEditedByName
    }

    PRODUCT {
        int productId PK
        int saleId FK
        string name
        string description
        string images
        decimal quantity
        string status
        datetime date
    }

    QUOTATION {
        int quotationId PK
        int clientId FK
        string title
        datetime date
        string description
        string status
        enum productType
        string images
        string lastEditedByName
    }

    QUOTATION_VERSION {
        int quotationVersionId PK
        int quotationId FK
        bool isCurrent
        string subDescription
        int versionNumber
        decimal profitMargin
        decimal profit
        string extraCostsJson
        decimal productTax
        decimal laborCost
        string lastEditedByName
        decimal discount
    }

    ASSETS_QUOTATION {
        int assetsQuotationId PK
        int assetsId FK
        int quotationVersionId FK
        decimal usageQuantity
        decimal cost
        decimal subTotal
    }

    ASSETS {
        string id PK
        string name
        string description
        decimal price
        string image
        decimal electricity
        enum wearType
    }

    SUPPLIES_QUOTATION {
        int suppliesQuotationId PK
        int suppliesId FK
        int quotationVersionId FK
        decimal usageQuantity
        decimal cost
        decimal subTotal
        string lastEditedByName
    }

    SUPPLIES {
        string id PK
        enum type
        string name
        enum color
        string brand
        string image
        decimal lastCost
        string description
        boolean isActive
        decimal tax
        string unitsMeasurementId FK
    }

    UNITS_MEASUREMENT {
        string id PK
        string name
        string symbol
        string type
    }

    ASSORTMENT {
        string id PK
        int assortmentId
        decimal unitaryPurchaseCost
        boolean isPack
        int packQuantity
        int purchaseQuantity
        string suppliesId FK
        string lastEditedByName
        enum status
        datetime deliveryDate
    }

    INVENTORY_SUPPLIES {
        string id PK
        int inventorySuppliesId
        decimal availableQuantity
        decimal minimumQuantity
        decimal committedQuantity
        string unitsMeasurementId FK
        string suppliesId FK
        string lastDispatchNumber
    }

    INVENTORY_PRODUCT {
        int inventoryProductId PK
        int productId FK
        decimal availableQuantity
        decimal committedQuantity
        decimal minimumQuantity
        datetime date
    }

    SYSTEM_CONFIGURATION {
        string id PK
        string commercialName
        string logo
        string background
        double costOfElectricity
        datetime updatedAt
    }